Release selector fixed on iPhone

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -187,7 +187,7 @@ dt {
 }
 
 #header-sticky {
-  z-index: 5;
+  z-index: 20;
   position: fixed;
   top: -52px;
   width: 100%;
@@ -365,6 +365,7 @@ header .menuweb-bar .menu-item a {
 }
 
 #header-default .version-zone {
+  position: relative;
 	padding: 10px 0;
 }
 
